--- a/frontend/brands/src/components/Brand/Brand.css
+++ b/frontend/brands/src/components/Brand/Brand.css
@@ -1,11 +1,6 @@
-.container {
-    padding: 0 6px;
-    width: 90%;
-    height: 90%;
-    position: relative;
-}
 
-.rounded {
+
+.rounded-circle {
     max-width: 90%;
     max-height: 90%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -14,6 +9,10 @@
 img:hover {
     transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   }
+
+p:hover {
+transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
 
 p {
     position: absolute;
