--- a/frontend/brands/src/components/Brand/Brand.css
+++ b/frontend/brands/src/components/Brand/Brand.css
@@ -8,10 +8,10 @@ img:hover {
     transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   }
 
-p:hover {
-    transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-}
-
+/* p:hover { */
+    /* transform: scale(1.1); (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+/* } */
+/* 
 p {
     position: absolute;
     top: 50%;
@@ -20,4 +20,4 @@ p {
     font-size: 18px;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+} */
